# ledscroll

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
src/ledscroll/: __init__.py  cli.py  led_panel.py
src/ledscroll/animations/: __init__.py  base.py  complex.py  params.json  registry.py  simple.py  slide_text.py
test/: conftest.py  perf.py  reference.py  test_performance.py
